--- a/app/src/main/res/drawable/buttons_background.xml
+++ b/app/src/main/res/drawable/buttons_background.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:startColor="#2193b0"
-                android:endColor="#6dd5ed"
+                android:startColor="#ff5733"
+                android:endColor="#fdff33"
                 android:type="linear" />
         </shape>
     </item>
